--- a/gk.bib
+++ b/gk.bib
@@ -25348,66 +25348,70 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @inproceedings{McMLinVan03,
-  title =	 {The national historical geographic information
+  title =        {The national historical geographic information
                   system (NHGIS), Version 11.0},
-  author =	 {McMaster, Robert B and Lindberg, Mark and Van Riper,
+  author =       {McMaster, Robert B and Lindberg, Mark and Van Riper,
                   David},
-  booktitle =	 {Proceedings 21st International Cartographic
+  booktitle =    {Proceedings 21st International Cartographic
                   Conference},
-  pages =	 {821--828},
-  year =	 {2003}
+  pages =        {821--828},
+  year =         {2003}
 }
 @article{Stoddard65,
-  title =	 {The shape of atolls},
-  author =	 {Stoddart, David R},
-  journal =	 {Marine Geology},
-  volume =	 {3},
-  number =	 {5},
-  pages =	 {369--383},
-  year =	 {1965},
-  publisher =	 {Elsevier}
+  title =        {The shape of atolls},
+  author =       {Stoddart, David R},
+  journal =      {Marine Geology},
+  volume =       {3},
+  number =       {5},
+  pages =        {369--383},
+  year =         {1965},
+  publisher =    {Elsevier}
 }
 @article{Frolov75,
-  title={Measuring the shape of geographical phenomena: A history of the issue},
-  author={Frolov, Yu S},
-  journal={Soviet Geography},
-  volume={16},
-  number={10},
-  pages={676--687},
-  year={1975},
-  publisher={Taylor \& Francis}
+  title =        {Measuring the shape of geographical phenomena: A
+                  history of the issue},
+  author =       {Frolov, Yu S},
+  journal =      {Soviet Geography},
+  volume =       {16},
+  number =       {10},
+  pages =        {676--687},
+  year =         {1975},
+  publisher =    {Taylor \& Francis}
 }
 @article{LeeSal70,
-  title={A method of measuring shape},
-  author={Lee, David R and Sallee, G Thomas},
-  journal={Geographical Review},
-  pages={555--563},
-  year={1970},
-  publisher={JSTOR}
+  title =        {A method of measuring shape},
+  author =       {Lee, David R and Sallee, G Thomas},
+  journal =      {Geographical Review},
+  pages =        {555--563},
+  year =         {1970},
+  publisher =    {JSTOR}
 }
 @article{Coulson78,
-  title={`Potential for Variation': A Concept for Measuring the Significance of Variations in Size and Shape of Areal Units},
-  author={Coulson, Michael RC},
-  journal={Geografiska Annaler. Series B. Human Geography},
-  pages={48--64},
-  year={1978},
-  publisher={JSTOR}
+  title =        {`Potential for Variation': A Concept for Measuring
+                  the Significance of Variations in Size and Shape of
+                  Areal Units},
+  author =       {Coulson, Michael RC},
+  journal =      {Geografiska Annaler. Series B. Human Geography},
+  pages =        {48--64},
+  year =         {1978},
+  publisher =    {JSTOR}
 }
 @book{HsuRob70,
-  title={The fidelity of isopleth maps: An experimental study},
-  author={Hsu, Mei-Ling and Robinson, Arthur Howard},
-  year={1970},
-  publisher={U of Minnesota Press}
+  title =        {The fidelity of isopleth maps: An experimental
+                  study},
+  author =       {Hsu, Mei-Ling and Robinson, Arthur Howard},
+  year =         {1970},
+  publisher =    {U of Minnesota Press}
 }
 @article{Tsai05,
-  title={Quantifying urban form: compactness versus sprawl},
-  author={Tsai, Yu-Hsin},
-  journal={Urban studies},
-  volume={42},
-  number={1},
-  pages={141--161},
-  year={2005},
-  publisher={Sage Publications Sage UK: London, England}
+  title =        {Quantifying urban form: compactness versus sprawl},
+  author =       {Tsai, Yu-Hsin},
+  journal =      {Urban studies},
+  volume =       {42},
+  number =       {1},
+  pages =        {141--161},
+  year =         {2005},
+  publisher =    {Sage Publications Sage UK: London, England}
 }
 @article{LewDevPit13,
   title =	 {Digital boundary definitions of united states
@@ -25469,32 +25473,34 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher =    {NBER}
 }
 @article{PriGet93,
-  title={Vertical-horizontal illusion: One eye is better than two},
-  author={Prinzmetal, William and Gettleman, Laurie},
-  journal={Attention, Perception, \& Psychophysics},
-  volume={53},
-  number={1},
-  pages={81--88},
-  year={1993},
-  publisher={Springer}
+  title =        {Vertical-horizontal illusion: One eye is better than
+                  two},
+  author =       {Prinzmetal, William and Gettleman, Laurie},
+  journal =      {Attention, Perception, \& Psychophysics},
+  volume =       {53},
+  number =       {1},
+  pages =        {81--88},
+  year =         {1993},
+  publisher =    {Springer}
 }
 @article{Blasius12,
-  title={Comparing Ranking Techniques in Web Surveys},
-  author={Blasius, J{\"o}rg},
-  journal={Field Methods},
-  volume={24},
-  number={4},
-  pages={382--398},
-  year={2012},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+  title =        {Comparing Ranking Techniques in Web Surveys},
+  author =       {Blasius, J{\"o}rg},
+  journal =      {Field Methods},
+  volume =       {24},
+  number =       {4},
+  pages =        {382--398},
+  year =         {2012},
+  publisher =    {SAGE Publications Sage CA: Los Angeles, CA}
 }
 @incollection{Fabbris13,
-  title={Measurement scales for scoring or ranking sets of interrelated items},
-  author={Fabbris, Luigi},
-  booktitle={Survey data collection and integration},
-  pages={21--43},
-  year={2013},
-  publisher={Springer}
+  title =        {Measurement scales for scoring or ranking sets of
+                  interrelated items},
+  author =       {Fabbris, Luigi},
+  booktitle =    {Survey data collection and integration},
+  pages =        {21--43},
+  year =         {2013},
+  publisher =    {Springer}
 }
 @techreport{DugSmi16,
   author =       {Duggan, Maeve and Smith, Aaron},
@@ -25547,43 +25553,48 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @article{UmbWeiZuk97,
-author = {Umbaugh, S.E. and Wei, Y.S. and Zuke, M.},
-doi = {10.1109/51.603650},
-journal = {IEEE Engineering in Medicine and Biology Magazine},
-number = {4},
-pages = {62--73},
-title = {{Feature extraction in image analysis. A program for facilitating data reduction in medical image classification}},
-url = {bit.ly/2yfiDtR},
-volume = {16},
-year = {1997}
+  author =       {Umbaugh, S.E. and Wei, Y.S. and Zuke, M.},
+  doi =          {10.1109/51.603650},
+  journal =      {IEEE Engineering in Medicine and Biology Magazine},
+  number =       {4},
+  pages =        {62--73},
+  title =        {{Feature extraction in image analysis. A program for
+                  facilitating data reduction in medical image
+                  classification}},
+  url =          {bit.ly/2yfiDtR},
+  volume =       {16},
+  year =         {1997}
 }
 
 @article{Boulesteix04,
-abstract = {},
-author = {Boulesteix, Anne-Laure},
-doi = {10.2202/1544-6115.1075},
-journal = {Statistical Applications in Genetics and Molecular Biology},
-month = {jan},
-number = {1},
-pages = {1--30},
-publisher = {De Gruyter},
-title = {{PLS Dimension Reduction for Classification with Microarray Data}},
-url = {bit.ly/2z2sqTe},
-volume = {3},
-year = {2004}
+  abstract =     {},
+  author =       {Boulesteix, Anne-Laure},
+  doi =          {10.2202/1544-6115.1075},
+  journal =      {Statistical Applications in Genetics and Molecular
+                  Biology},
+  month =        {jan},
+  number =       {1},
+  pages =        {1--30},
+  publisher =    {De Gruyter},
+  title =        {{PLS Dimension Reduction for Classification with
+                  Microarray Data}},
+  url =          {bit.ly/2z2sqTe},
+  volume =       {3},
+  year =         {2004}
 }
 
 @article{BruEri00,
-author = {Brunzell, H. and Eriksson, J.},
-doi = {10.1016/S0031-3203(99)00142-9},
-journal = {Pattern Recognition},
-number = {10},
-pages = {1741--1748},
-publisher = {Pergamon},
-title = {{Feature reduction for classification of multidimensional data}},
-url = {bit.ly/2ihoYdl},
-volume = {33},
-year = {2000}
+  author =       {Brunzell, H. and Eriksson, J.},
+  doi =          {10.1016/S0031-3203(99)00142-9},
+  journal =      {Pattern Recognition},
+  number =       {10},
+  pages =        {1741--1748},
+  publisher =    {Pergamon},
+  title =        {{Feature reduction for classification of
+                  multidimensional data}},
+  url =          {bit.ly/2ihoYdl},
+  volume =       {33},
+  year =         {2000}
 }
 @article{VinLarLaj10,
   author =       {Vincent, Pascal and Larochelle, Hugo and Lajoie,
@@ -25605,7 +25616,7 @@ year = {2000}
   journal =      {Journal of Machine Learning Research},
   pages =        {2579--2605},
   title =        {Visualizing Data using t-SNE},
-  url =          {http://bit.ly/2xBnFMH},
+  url =          {bit.ly/2xBnFMH},
   volume =       {9},
   year =         {2008}
 }
