--- a/gk.bib
+++ b/gk.bib
@@ -25628,3 +25628,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2010},
   publisher =    {Springer}
 }
+
+@article{AthEckImb17,
+  author =       {Athey, Susan, and Eckles, Dean and Imbens, Guido W.},
+  journal =      {Journal of the American Statistical Association},
+  pages =        {1--11},
+  title =        {Exact {\it p}-values for Network Interference},
+  url =          {https://doi.org/10.1080/01621459.2016.1241178},
+  year =         {Forthcoming}
+}
