added Weitz12 and DucPrzSte15

--- a/gk.bib
+++ b/gk.bib
@@ -25647,3 +25647,23 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   volume =       {90},
   year =         {2008}
 }
+
+@article{Weitz12,
+  author =       {Weitz-Shapiro, Rebecca},
+  journal =      {American Journal of Political Science},
+  pages =        {568--583},
+  title =        {What wins votes: Why some politicians opt out of clientelism},
+  number =       {3},
+  volume =       {56},
+  year =         {2012}
+}
+
+@article{DucPrzSte15,
+  author =       {Duch, Raymond and Przepiorka, Wojtek and Stevenson, Randolph},
+  journal =      {American Journal of Political Science},
+  pages =        {372--389},
+  title =        {Responsibility Attribution for Collective Decision Makers},
+  number =       {2},
+  volume =       {59},
+  year =         {2015}
+}
