fixed typo CruHotImb08

--- a/gk.bib
+++ b/gk.bib
@@ -25642,7 +25642,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {Athey, Susan, and Eckles, Dean and Imbens, Guido W.},
   journal =      {The Review of Economics and Statistics},
   pages =        {389--405},
-  title =        {Nonparametric Tests for Treatment Effect Heterogeneity,
+  title =        {Nonparametric Tests for Treatment Effect Heterogeneity},
   number =       {3},
   volume =       {90},
   year =         {2008}
