--- a/gk.bib
+++ b/gk.bib
@@ -25667,3 +25667,11 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   volume =       {59},
   year =         {2015}
 }
+@book{JamWitHas13,
+  title =        {An introduction to statistical learning},
+  author =       {James, Gareth and Witten, Daniela and Hastie, Trevor
+                  and Tibshirani, Robert},
+  volume =       {112},
+  year =         {2013},
+  publisher =    {Springer}
+}
