--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -358,13 +358,13 @@ pages={1037--1060},
 }
 
 @Article{KinLuShi10,
-  author = 	 {Gary King and Ying Lu and Kenji Shibuya},
-  title = 	 {Designing Verbal Autopsy Studies},
-  journal = 	 {Population Health Metrics},
-  year = 	 2010,
-  volume =	 8,
-  number =	 19,
-  note =	 {http://j.mp/DAutopsy}
+  author =       {Gary King and Ying Lu and Kenji Shibuya},
+  title =        {Designing Verbal Autopsy Studies},
+  journal =      {Population Health Metrics},
+  year =         2010,
+  volume =       8,
+  number =       19,
+  url =          {j.mp/DAutopsy}
 }
 
 @article{LazPenAda09,
@@ -424,12 +424,15 @@ pages={1037--1060},
   note =         {{http://j.mp/iXUpBv}}
 }
 
-@Article{IacKinPor11c,
+@Article{IacKinPor12,  %11c
   author =       {Stefano M. Iacus and Gary King and Giuseppe Porro},
   title =        {Causal Inference Without Balance Checking: Coarsened
                   Exact Matching},
   journal =      {Political Analysis},
-  year =         {2011},
+  volume =       {20},
+  number =       {1},
+  pages =        {1--24},
+  year =         {2012},
   URL =          {j.mp/woCheck}
 }
 
