fixed authors CruHotImb08

--- a/gk.bib
+++ b/gk.bib
@@ -25630,7 +25630,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @article{AthEckImb17,
-  author =       {Athey, Susan, and Eckles, Dean and Imbens, Guido W.},
+  author =       {Athey, Susan and Eckles, Dean and Imbens, Guido W.},
   journal =      {Journal of the American Statistical Association},
   pages =        {1--11},
   title =        {Exact {\it p}-values for Network Interference},
@@ -25639,7 +25639,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @article{CruHotImb08,
-  author =       {Athey, Susan, and Eckles, Dean and Imbens, Guido W.},
+  author =       {Crump, Richard K. and Hotz, V. Joseph and Imbens, Guido W. and Mitnik, Oscar A.},
   journal =      {The Review of Economics and Statistics},
   pages =        {389--405},
   title =        {Nonparametric Tests for Treatment Effect Heterogeneity},
