--- a/gk.bib
+++ b/gk.bib
@@ -25686,9 +25686,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @misc{AbaAgaBar15,
-  title =        { {TensorFlow}: Large-Scale Machine Learning on
+  title =        {TensorFlow: Large-Scale Machine Learning on
                   Heterogeneous Systems},
-  url =          {https://www.tensorflow.org/},
+  url =          {tensorflow.org},
   author =       {Mart\'{\i}n~Abadi and Ashish~Agarwal and Paul~Barham
                   and Eugene~Brevdo and Zhifeng~Chen and Craig~Citro
                   and Greg~S.~Corrado and Andy~Davis and Jeffrey~Dean
