--- a/gk.bib
+++ b/gk.bib
@@ -25689,20 +25689,35 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title =        {TensorFlow: Large-Scale Machine Learning on
                   Heterogeneous Systems},
   url =          {tensorflow.org},
-  author =       {Mart\'{\i}n~Abadi and Ashish~Agarwal and Paul~Barham
+  author =       {Martin~Abadi and Ashish~Agarwal and Paul~Barham
                   and Eugene~Brevdo and Zhifeng~Chen and Craig~Citro
                   and Greg~S.~Corrado and Andy~Davis and Jeffrey~Dean
                   and Matthieu~Devin and Sanjay~Ghemawat and
                   Ian~Goodfellow and Andrew~Harp and Geoffrey~Irving
                   and Michael~Isard and Yangqing Jia and
                   Rafal~Jozefowicz and Lukasz~Kaiser and
-                  Manjunath~Kudlur and Josh~Levenberg and Dan~Man\'{e}
+                  Manjunath~Kudlur and Josh~Levenberg and Dan~Mane
                   and Rajat~Monga and Sherry~Moore and Derek~Murray
                   and Chris~Olah and Mike~Schuster and Jonathon~Shlens
                   and Benoit~Steiner and Ilya~Sutskever and
                   Kunal~Talwar and Paul~Tucker and Vincent~Vanhoucke
-                  and Vijay~Vasudevan and Fernanda~Vi\'{e}gas and
+                  and Vijay~Vasudevan and Fernanda~Viegas and
                   Oriol~Vinyals and Pete~Warden and Martin~Wattenberg
                   and Martin~Wicke and Yuan~Yu and Xiaoqiang~Zheng},
+%  author =       {Mart\'{\i}n~Abadi and Ashish~Agarwal and Paul~Barham
+%                  and Eugene~Brevdo and Zhifeng~Chen and Craig~Citro
+%                  and Greg~S.~Corrado and Andy~Davis and Jeffrey~Dean
+%                  and Matthieu~Devin and Sanjay~Ghemawat and
+%                  Ian~Goodfellow and Andrew~Harp and Geoffrey~Irving
+%                  and Michael~Isard and Yangqing Jia and
+%                  Rafal~Jozefowicz and Lukasz~Kaiser and
+%                  Manjunath~Kudlur and Josh~Levenberg and Dan~Man\'{e}
+%                  and Rajat~Monga and Sherry~Moore and Derek~Murray
+%                  and Chris~Olah and Mike~Schuster and Jonathon~Shlens
+%                  and Benoit~Steiner and Ilya~Sutskever and
+%                  Kunal~Talwar and Paul~Tucker and Vincent~Vanhoucke
+%                  and Vijay~Vasudevan and Fernanda~Vi\'{e}gas and
+%                  Oriol~Vinyals and Pete~Warden and Martin~Wattenberg
+%                  and Martin~Wicke and Yuan~Yu and Xiaoqiang~Zheng},
   year =         {2015}
 }
