--- a/gk.bib
+++ b/gk.bib
@@ -25721,3 +25721,35 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 %                  and Martin~Wicke and Yuan~Yu and Xiaoqiang~Zheng},
   year =         {2015}
 }
+
+@article{LiaWie02,
+  title={Classification and Regression by randomForest},
+  author={Liaw, Andy and Wiener, Matthew},
+  journal={R News},
+  volume={2},
+  number={3},
+  pages={18--22},
+  year={2002}
+}
+
+@article{Ridgeway06,
+    title = {gbm: Generalized Boosted Regression Models},
+    author = {Ridgeway, Greg},
+    year = {2015},
+    note = {R package version 2.1.1},
+    url = {https://CRAN.R-project.org/package=gbm},
+  }
+
+@article{KauKraSen18,
+  title={Improving Supreme Court Forecasting Using Boosted Decision Trees},
+  author={Kaufman, Aaron and Kraft, Peter and Sen, Maya},
+  year={2018}
+}
+@Manual{MeyDimHor14,
+    title = {e1071: Misc Functions of the Department of Statistics, Probability
+Theory Group (Formerly: E1071), TU Wien},
+    author = {Meyer, David and Dimitriadou, Evgenia and Hornik, Kurt and Weingessel, Andreas and Leisch, Friedrich},
+    year = {2017},
+    note = {R package version 1.6-8},
+    url = {https://CRAN.R-project.org/package=e1071},
+  }
