--- a/gk.bib
+++ b/gk.bib
@@ -25419,7 +25419,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =	 {Jeffrey B Lewis and Brandon DeVine and
                   Lincoln Pitcher and Kenneth C Martis},
   journal =	 {Data file and code book},
-  url =		 {cdmaps.polisci.ucla.edu},
+  url =		 {j.mp/jblkmaps},
   year =	 2013
 }
 @article{LiGooChu13,
