--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -344,7 +344,7 @@ pages={1037--1060},
   volume =       106,
   pages =        {345--361},
   year =         2011,
-  URL =          {http://j.mp/matchMIB}
+  URL =          {j.mp/matchMIB}
 }
 
 @article{HopKin10,
