added compactness lit cites

--- a/gk.bib
+++ b/gk.bib
@@ -25753,3 +25753,25 @@ Theory Group (Formerly: E1071), TU Wien},
     note = {R package version 1.6-8},
     url = {https://CRAN.R-project.org/package=e1071},
   }
+
+@article{AnsSny12,
+  title={The effects of redistricting on incumbents},
+  author={Ansolabehere, Stephen and Snyder Jr, James M},
+  journal={Election Law Journal},
+  volume={11},
+  number={4},
+  pages={490--502},
+  year={2012},
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
+}
+
+@article{ForPla05,
+  title={Redistricting principles and incumbency protection in the US Congress},
+  author={Forgette, Richard and Platt, Glenn},
+  journal={Political Geography},
+  volume={24},
+  number={8},
+  pages={934--951},
+  year={2005},
+  publisher={Elsevier}
+}
