--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1865,16 +1865,16 @@ pages={1037--1060},
 }
 
 @article{BroKin87,
-  author =	 {Robert X Browning and Gary King},
-  title =	 {Seats, Votes, and Gerrymandering: Measuring Bias and
+  author =       {Robert X Browning and Gary King},
+  title =        {Seats, Votes, and Gerrymandering: Measuring Bias and
                   Representation in Legislative Redistricting},
-  journal =	 {Law and Policy},
-  volume =	 {9},
-  year =	 {1987},
-  pages =	 {305--322},
-  month =	 {July},
-  number =	 {3},
-  note =	 {{http://gking.harvard.edu/files/abs/LP9-abs.shtml}}
+  journal =      {Law and Policy},
+  volume =       {9},
+  year =         {1987},
+  pages =        {305--322},
+  month =        {July},
+  number =       {3},
+  url =          {j.mp/parSym}
 }
 
 @article{KinBro87,
