--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1878,16 +1878,16 @@ pages={1037--1060},
 }
 
 @article{KinBro87,
-  author =	 {Gary King and Robert X Browning},
-  title =	 {Democratic Representation and Partisan Bias in
+  author =       {Gary King and Robert X Browning},
+  title =        {Democratic Representation and Partisan Bias in
                   Congressional Elections},
-  journal =	 {American Political Science Review},
-  volume =	 {81},
-  year =	 {1987},
-  pages =	 {1252--1273},
-  month =	 {December},
-  number =	 {4},
-  note =	 {{http://gking.harvard.edu/files/abs/sv-abs.shtml}}
+  journal =      {American Political Science Review},
+  volume =       {81},
+  year =         {1987},
+  pages =        {1252--1273},
+  month =        {December},
+  number =       {4},
+  url =          {j.mp/parSym}
 }
 
 @article{King87,
