--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1885,7 +1885,7 @@ pages={1037--1060},
   volume =       {81},
   year =         {1987},
   pages =        {1252--1273},
-  month =        {December},
+  month =        12,
   number =       {4},
   url =          {j.mp/parSym}
 }
