--- a/gk.bib
+++ b/gk.bib
@@ -25468,9 +25468,11 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title =        {Polanyi's paradox and the shape of employment
                   growth},
   author =       {Autor, David},
-  volume =       {20485},
-  year =         {2014},
-  publisher =    {NBER}
+  year =         {2015},
+  journal =      {Federal Reserve Bank of St. Louis: Economic Policy
+                  Proceedings, Reevaluating Labor Market Dynamics},
+  url =          {j.mp/PolanyiP},
+  pages =        {129–177}
 }
 @article{PriGet93,
   title =        {Vertical-horizontal illusion: One eye is better than
