--- a/gk.bib
+++ b/gk.bib
@@ -25745,6 +25745,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @article{KauKraSen18,
   title={Improving Supreme Court Forecasting Using Boosted Decision Trees},
   author={Kaufman, Aaron and Kraft, Peter and Sen, Maya},
+  url={j.mp/sctfore},
   year={2018}
 }
 @Manual{MeyDimHor14,
