--- a/gk.bib
+++ b/gk.bib
@@ -25464,7 +25464,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {1966},
   publisher =    {Cambridge University Press}
 }
-@book{Autor14,
+@article{Autor14,
   title =        {Polanyi's paradox and the shape of employment
                   growth},
   author =       {Autor, David},
