CalCatTit14 and SkoDavBeh99

--- a/gk.bib
+++ b/gk.bib
@@ -25778,3 +25778,23 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2005},
   publisher={Elsevier}
 }
+@article{CalCatTit14,
+  author =       {Calonico, Sebastian and Cattaneo, Matias D. and Titiunik, Rocio},
+  journal =      {Econometrica},
+  pages =        {2295--2326},
+  title =        {Robust Nonparametric Confidence Intervals for Regression-Discontinuity Designs},
+  number =       {6},
+  volume =       {82},
+  year =         {2014}
+}
+
+@techreport{SkoDavBeh99,
+  author =       {Skoufias, Emmanuel and Davis, Benjamin and Behrman, Jere R.},
+  title =        {An Evaluation of the Selection of Beneficiary Households in the Education, Health, and Nutrition Program (PROGRESA) of Mexico},
+  institution =  {International Food Policy Research Institute},
+  year =         {1999},
+  month =        6,
+  type =         {Research Report},
+  address =      {2033 K Street, NW Washington, DC 20006},
+  note = {\url{https://goo.gl/AVamve}}
+}
