--- a/gk.bib
+++ b/gk.bib
@@ -25798,3 +25798,12 @@ Theory Group (Formerly: E1071), TU Wien},
   address =      {2033 K Street, NW Washington, DC 20006},
   note = {\url{https://goo.gl/AVamve}}
 }
+
+
+@article{SocPerWu13,
+	author={Socher, Richard and Perelygin, Alex and Wu, Jean and Chuang, Jason and Manning, Christopher and Ng, Andrew and Potts, Christopher},
+	title={{Recursive Deep Models for Semantic Compositionality Over a Sentiment Treebank}},
+	journal={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+	year={2013},
+	pages={1631-1642}
+}
