--- a/gk.bib
+++ b/gk.bib
@@ -25789,21 +25789,39 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 
 @techreport{SkoDavBeh99,
-  author =       {Skoufias, Emmanuel and Davis, Benjamin and Behrman, Jere R.},
-  title =        {An Evaluation of the Selection of Beneficiary Households in the Education, Health, and Nutrition Program (PROGRESA) of Mexico},
+  author =       {Skoufias, Emmanuel and Davis, Benjamin and Behrman,
+                  Jere R.},
+  title =        {An Evaluation of the Selection of Beneficiary
+                  Households in the Education, Health, and Nutrition
+                  Program (PROGRESA) of Mexico},
   institution =  {International Food Policy Research Institute},
   year =         {1999},
   month =        6,
   type =         {Research Report},
   address =      {2033 K Street, NW Washington, DC 20006},
-  note = {\url{https://goo.gl/AVamve}}
+  url =          goo.gl/AVamve}
 }
 
-
 @article{SocPerWu13,
-	author={Socher, Richard and Perelygin, Alex and Wu, Jean and Chuang, Jason and Manning, Christopher and Ng, Andrew and Potts, Christopher},
-	title={{Recursive Deep Models for Semantic Compositionality Over a Sentiment Treebank}},
-	journal={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
-	year={2013},
-	pages={1631-1642}
+  author =       {Socher, Richard and Perelygin, Alex and Wu, Jean and
+                  Chuang, Jason and Manning, Christopher and Ng,
+                  Andrew and Potts, Christopher},
+  title =        {{Recursive Deep Models for Semantic Compositionality
+                  Over a Sentiment Treebank}},
+  journal =      {Proceedings of the Conference on Empirical Methods
+                  in Natural Language Processing},
+  year =         {2013},
+  pages =        {1631-1642}
+}
+
+@article{CerCurIac16,
+  title =        {iSA: A fast, scalable and accurate algorithm for
+                  sentiment analysis of social media content},
+  author =       {Ceron, Andrea and Curini, Luigi and Iacus, Stefano
+                  Maria},
+  journal =      {Information Sciences},
+  volume =       {367},
+  pages =        {105--124},
+  year =         {2016},
+  publisher =    {Elsevier}
 }
