--- a/gk.bib
+++ b/gk.bib
@@ -25799,7 +25799,7 @@ Theory Group (Formerly: E1071), TU Wien},
   month =        6,
   type =         {Research Report},
   address =      {2033 K Street, NW Washington, DC 20006},
-  url =          {goo.gl/AVamve}}
+  url =          {goo.gl/AVamve}
 }
 
 @article{SocPerWu13,
