--- a/gk.bib
+++ b/gk.bib
@@ -25691,7 +25691,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title =        {TensorFlow: Large-Scale Machine Learning on
                   Heterogeneous Systems},
   url =          {tensorflow.org},
-  author =       {Martin~Abadi and Ashish~Agarwal and Paul~Barham
+  author =       {Martin Abadi and Ashish~Agarwal and Paul~Barham
                   and Eugene~Brevdo and Zhifeng~Chen and Craig~Citro
                   and Greg~S.~Corrado and Andy~Davis and Jeffrey~Dean
                   and Matthieu~Devin and Sanjay~Ghemawat and
