added 9 for words.tex

--- a/gk.bib
+++ b/gk.bib
@@ -25825,3 +25825,82 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2016},
   publisher =    {Elsevier}
 }
+
+@article{MccRie15,
+	author={McClendon, Gwyneth and Rachel Beatty Riedl},
+	title={Religion as a stimulant of political participation: Experimental evidence from Nairobi, Kenya},
+	journal= {jop},
+	volume= {77},
+	year= {2015},
+	pages={1045--1057},
+	month={October},
+	number= {4}
+}
+
+@article{EnoFow16,
+	author={Enos, Ryan and Fowler, Anthony},
+	title={Aggregate Effects of Large-Scale Campaigns on Voter Turnout*},
+	journal= {Political Science Research and Methods},
+	volume= {21},
+	year= {2016},
+	pages={1--19},
+	month={April}
+}
+
+@techreport{TaySteWoo11,
+  author =       {
+Taylor, Bruce and Stein, Nan, and 
+Woods, Dan and Mumford, Elizabeth
+},
+  title =        {Shifting Boundaries: Final Report on an Experimental Evaluation of a Youth Dating Violence Prevention Program in New York City Middle Schools },
+  institution =  {Police Executive Research Forum},
+  year =         {2011},
+  month =        {October},
+  type =         {Final Report},
+}
+
+@article{BaiHopRog16,
+	author={Bailey, Michael and Hopkins, Daniel and Rogers, Todd},
+	title={Unresponsive and Unpersuaded: The Unintended Consequences of a Voter Persuasion Effort},
+	journal= {Political Behavior},
+	volume= {3},
+	year= {2016},
+	pages={713--746}
+}
+
+@article{FinTauWri12,
+	author={Finkelstein, Amy and Taubman, Sarah and Wright, Bill and Bernstein, Mira and Gruber, Jonathan and Newhouse, Joseph and Allen, Heidi and Baicker, Katherine},
+	title={The Oregon Health Insurance Experiment: Evidence from the First Year},
+	journal= {The Quarterly Journal of Economics},
+	volume= {127},
+	year= {2012},
+	pages={1057--1106},
+	month={August},
+	number= {3}
+}
+
+@misc{KugKugSaa15,
+author = {Kugler, Adriana and Kugler, Maurice and Saavedra, Juan and Prada, Luis Omar Herrera},
+title =	 {Long-term Direct and Spillover Effects of Job Training: Experimental Evidence from Colombia},
+year =	 2015,
+howpublished = {NBER}
+}
+
+@article{BolFerMir13,
+	author={Bolsen, Toby and Ferraro, Paul and Miranda, Juan Jose},
+	title={Are Voters More Likely to Contribute to Other Public Goods? Evidence from a Large‐Scale Randomized Policy Experiment },
+	journal= {ajps},
+	volume= {58},
+	year= {2013},
+	pages={17--30},
+	month={August},
+	number= {1}
+}
+
+@misc{KugKugSaa15,
+author =	 {Calle, Michael and De Mel, Suresh and McIntosh, Craig and Woodruff, Christopher},
+title =	 {What are the Headwaters of Formal Savings? Experimental Evidence from Sri Lanka},
+year =	 2014,
+howpublished = {NBER}
+}
+
