--- a/gk.bib
+++ b/gk.bib
@@ -25897,10 +25897,9 @@ howpublished = {NBER}
 	number= {1}
 }
 
-@misc{KugKugSaa15,
+@misc{CalDemMci14,
 author =	 {Calle, Michael and De Mel, Suresh and McIntosh, Craig and Woodruff, Christopher},
 title =	 {What are the Headwaters of Formal Savings? Experimental Evidence from Sri Lanka},
 year =	 2014,
 howpublished = {NBER}
 }
-
