--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1309,16 +1309,15 @@ pages={1037--1060},
 }
 
 @article{KatKin99,
-  author =	 {Jonathan Katz and Gary King},
-  title =	 {A Statistical Model for Multiparty Electoral Data},
-  journal =	 {American Political Science Review},
-  volume =	 93,
-  year =	 1999,
-  pages =	 {15--32},
-  month =	 {March},
-  number =	 {1},
-  note =
-                  {{http://gking.harvard.edu/files/abs/multiparty-abs.shtml}}
+  author =       {Jonathan Katz and Gary King},
+  title =        {A Statistical Model for Multiparty Electoral Data},
+  journal =      {American Political Science Review},
+  volume =       93,
+  year =         1999,
+  pages =        {15--32},
+  month =        {March},
+  number =       {1},
+  url =          {bit.ly/mtypty}
 }
 
 @article{King99,
@@ -1708,30 +1707,29 @@ pages={1037--1060},
 }
 
 @article{KinGel91,
-  author =	 {Gary King and Andrew Gelman},
-  title =	 {Systemic Consequences of Incumbency Advantage in the
+  author =       {Gary King and Andrew Gelman},
+  title =        {Systemic Consequences of Incumbency Advantage in the
                   U.S. House},
-  journal =	 {American Journal of Political Science},
-  volume =	 35,
-  year =	 1991,
-  pages =	 {110--138},
-  month =	 {February},
-  number =	 1 ,
-  note =
-                  {{http://gking.harvard.edu/files/abs/sysconseq-abs.shtml}}
+  journal =      {American Journal of Political Science},
+  volume =       35,
+  year =         1991,
+  pages =        {110--138},
+  month =        {February},
+  number =       1,
+  url =          {bit.ly/SystCs}
 }
 
 @article{AnsKin90,
-  author =	 {Stephen Ansolabehere and Gary King},
-  title =	 {Measuring the Consequences of Delegate Selection
+  author =       {Stephen Ansolabehere and Gary King},
+  title =        {Measuring the Consequences of Delegate Selection
                   Rules in Presidential Nominations},
-  journal =	 {Journal of Politics},
-  volume =	 {52},
-  year =	 {1990},
-  pages =	 {609--621},
-  month =	 {May},
-  number =	 {2},
-  note =	 {{http://gking.harvard.edu/files/abs/pri-abs.shtml}}
+  journal =      {Journal of Politics},
+  volume =       {52},
+  year =         {1990},
+  pages =        {609--621},
+  month =        {May},
+  number =       {2},
+  url =          {bit.ly/DelSeln}
 }
 
 @article{GelKin90,
@@ -1774,17 +1772,16 @@ pages={1037--1060},
 }
 
 @article{King90,
-  author =	 {Gary King},
-  title =	 {Electoral Responsiveness and Partisan Bias in
+  author =       {Gary King},
+  title =        {Electoral Responsiveness and Partisan Bias in
                   Multiparty Democracies},
-  journal =	 {Legislative Studies Quarterly},
-  volume =	 {XV},
-  year =	 {1990},
-  pages =	 {159--181},
-  month =	 {May},
-  number =	 {2},
-  note =
-                  {{http://gking.harvard.edu/files/abs/electresp-abs.shtml}}
+  journal =      {Legislative Studies Quarterly},
+  volume =       {XV},
+  year =         {1990},
+  pages =        {159--181},
+  month =        {May},
+  number =       {2},
+  url =          {bit.ly/ErespMP}
 }
 
 @article{GelKin89,
